force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>