force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Last_Complete_Run__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Last_Complete_Run__c</fullName>
    <description>When was this job last successfully completed?</description>
    <inlineHelpText>When was this job last successfully completed?</inlineHelpText>
    <label>Last Complete Run</label>
    <type>DateTime</type>
</CustomField>