force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Last_Run_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Last_Run_Status_Message__c</fullName>
    <description>status of message of last invocation of this job</description>
    <inlineHelpText>status of message of last invocation of this job</inlineHelpText>
    <label>Last Run Status Message</label>
    <type>TextArea</type>
</CustomField>