force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Last_Run_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Last_Run_Window_Start__c</fullName>
    <description>When the Job last run what was the start of the chat transcript window?  (For a Manual job, this will be the &quot;Current Run Window Start&apos;)</description>
    <inlineHelpText>When the Job last run what was the start of the chat transcript window?  (For a Manual job, this will be the &quot;Current Run Window Start&apos;)</inlineHelpText>
    <label>Last Run Window Start</label>
    <type>DateTime</type>
</CustomField>