force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Next_Offset__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Next_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The next offset that would be needed to process a specific run. Used to continue processing from a specific point</description>
    <inlineHelpText>The next offset that would be needed to process a specific run. Used to continue processing from a specific point</inlineHelpText>
    <label>Next Offset</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>