force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Scheduled_Job_Id__c</fullName>
    <description>The ID of the scheduled job for this config (system managed / read only)</description>
    <inlineHelpText>The ID of the scheduled job for this config (system managed / read only)</inlineHelpText>
    <label>Scheduled Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>