force-app/main/default/objects/LiveEngage__ChatSync_Status__c/fields/LiveEngage__Status__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>