force-app/main/default/objects/LiveEngage__ChatSync_Status__c/listViews/LiveEngage__All.listView-meta.xml
<ListView>
    <fullName>LiveEngage__All</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Status__c</columns>
    <columns>LiveEngage__Last_Run_Window_Start__c</columns>
    <columns>LiveEngage__Last_Run_Window_End__c</columns>
    <columns>LiveEngage__Last_Run_Status_Message__c</columns>
    <columns>LiveEngage__Scheduled_Job_Id__c</columns>
    <columns>LiveEngage__Batch_Job_Id__c</columns>
    <columns>LiveEngage__Last_Complete_Run__c</columns>
    <columns>LiveEngage__Next_Offset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>